--- a/style.less
+++ b/style.less
@@ -934,7 +934,7 @@ body .nav-menu ul .active > a{
 
 
 /* ------------------------------------
-4.About area start here 
+4.About area start heree
 ---------------------------------------*/
 .about-bg{
     background: url(images/about/3.jpg) center top no-repeat;
