--- a/style.css
+++ b/style.css
@@ -746,7 +746,7 @@ body .nav-menu ul .active > a {
   color: #fff;
 }
 .slider-main .owl-nav .owl-prev:hover i {
-  background: #39bf4f;
+  background: #0012db;
 }
 .slider-main .owl-nav .owl-next {
   position: absolute;
@@ -763,7 +763,7 @@ body .nav-menu ul .active > a {
   transition: all 1.5s ease 0s;
 }
 .slider-main .owl-nav .owl-next:hover i {
-  background: #a70606;
+  background: #0012db;
 }
 .slider-main .dsc {
   position: absolute;
